# CMakePractise

./: .gitignore  CMakeLists.txt  build_debug.bat  build_release.bat  clean.bat  format_all_files.bat  generate_project_files.bat
.github/workflows/: linux-build.yml  windows-build.yml
Automation/: automation.py  build.bat
Source/: main.cpp
Source/Game/Private/: Character.cpp
Source/Game/Public/: Character.h
Source/Tests/: main.cpp
Source/Utils/Private/: MathUtils.cpp
Source/Utils/Public/: MathUtils.h
